2008-07-28  Carlos Garnacho  <carlos@imendio.com>

	* src/trackerd/tracker-crawler.c (file_enumerate_next_cb): Do not leak
	file infos and the enumerator.
	(tracker_crawler_start): Free remaining elements in the list.
	* src/trackerd/tracker-main.c (main): The index objects are owned by
	the index manager. Do not free them there.
	* src/trackerd/tracker-monitor.c (tracker_monitor_init): Do not leak
	the test monitor.

2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* utils/qdbm/print-words.c: Open the qdbm file in DP_ONOLCK mode, like
	the application itself does

2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-index.c:
	* src/tracker-indexer/tracker-index.h:
	* src/tracker-indexer/tracker-indexer.c:

	Open and close the QDBM file during pause and continue

2008-07-28  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-common/tracker-config.c (config_load_string_list)
	(tracker_config_add_watch_directory_roots)
	(tracker_config_add_crawl_directory_roots)
	(tracker_config_add_no_watch_directory_roots): Plug some leaks.
	* src/libtracker-db/tracker-db-manager.c (db_get_static_data)
	(db_get_static_xesam_data): Same here.
	* src/tracker-indexer/modules/evolution.c
	(get_account_name_from_imap_uri): Do not try to parse the wrong mail
	URIs.
	* src/tracker-indexer/tracker-index.c (tracker_index_free): Fix
	invalid memory reads.
	* src/tracker-indexer/tracker-indexer (tracker_indexer_finalize): Fix
	invalid free().

2008-07-25  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-db/tracker-db-dbus.c:
	(tracker_dbus_query_result_to_ptr_array): Make sure we rewind
	result sets before trying to create GStrv, GPtrArray or GHashTable
	pointers from them. This means the tracker-search-tool now shows a
	list of categories with the indexed count next to them - still not
	sure why the content is not listed but the service types are all
	wrong. 

2008-07-25  Martyn Russell  <martyn@imendio.com>
